# 2026robocon_r2

./: .gitignore  README.md  extract_pdf.py  output.txt
robocon_zero/: 111.py  benchmark.py  main.py  playground.py  pyproject.toml  readme.md  simple.json  test_visualizer.py
robocon_zero/algorithms/: __init__.py  decision_tree.py  path_planner.py
robocon_zero/bench/: runner.py
robocon_zero/bench/tracks/: mini_4p.json
robocon_zero/commands/: __init__.py  commands.py
robocon_zero/config/: __init__.py  field_config.py
robocon_zero/demos/: comprehensive_demo.py  demo_new_features.py
robocon_zero/executor/: __init__.py  core.py
robocon_zero/kf_decision/: __init__.py  abc.py  policy.py  r1_policy.py  registry.py  simple_policy.py  types.py
robocon_zero/tests/: test_new_features.py  test_policy.py  test_r1_policy.py
robocon_zero/tests/snapshots/test_policy_snapshot/: snapshot.json
robocon_zero/utils/: __init__.py  analyzer.py  logger.py  rule_validator.py
robocon_zero/visualization/: field_visualizer.py
src/r2_bringup/: CMakeLists.txt  package.xml
src/r2_bringup/launch/: r2_system.launch.py
src/r2_decision/: CMakeLists.txt  package.xml
src/r2_decision/_cpp_backup/: r2_decision_callbacks.cpp  r2_decision_fsm.cpp
src/r2_decision/_cpp_backup/include/r2_decision/: r2_decision_node.hpp
src/r2_decision/include/r2_decision/: r2_decision_node.hpp
src/r2_decision/src/: r2_decision_actions.cpp  r2_decision_callbacks.cpp  r2_decision_fsm.cpp  r2_decision_main.cpp  r2_decision_node.cpp  r2_decision_zone2_planner.cpp
src/r2_decision_py/: package.xml  setup.cfg  setup.py
src/r2_decision_py/r2_decision_py/: actions.py  decision.py  fsm.py  node.py  planner.py
src/r2_decision_py/test/: test_fsm.py  test_planner.py
src/r2_fake_lower_body/: CMakeLists.txt  package.xml
src/r2_fake_lower_body/src/: fake_lower_body_node.cpp
src/r2_fake_upper_body/: CMakeLists.txt  package.xml
src/r2_fake_upper_body/src/: fake_upper_body.node.cpp
src/r2_interfaces/: CMakeLists.txt  package.xml
src/r2_interfaces/msg/: ArmAck.msg  ArmCommand.msg  ArmDone.msg  GoalReached.msg
src/r2_lightboard_vision/: README.md  package.xml  setup.cfg  setup.py
src/r2_lightboard_vision/launch/: grab_scene_detector.launch.py  lightboard_detector.launch.py
src/r2_lightboard_vision/r2_lightboard_vision/: grab_scene_detector_node.py  lightboard_detector_node.py  spearhead_detector_node.py
src/robot_serial/: CMakeLists.txt  package.xml
src/robot_serial/include/chassis_serial_driver/: chassis_serial_driver.hpp  packet.hpp
src/robot_serial/msg/: Ack.msg  Command.msg  Juece.msg
src/robot_serial/src/: chassis_serial_driver.cpp
