<?xml version="1.0"?>
<package format="3">
  <name>r2_decision</name>
  <version>0.0.1</version>
  <description>R2 FSM decision node</description>

  <maintainer email="you@example.com">r2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>r2_interfaces</depend>
  <depend>robot_serial</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export> 
</package>
