<?xml version="1.0"?>
<package format="3">
  <name>r2_fake_upper_body</name>
  <version>0.0.1</version>
  <description>Fake upper body controller for testing</description>

  <maintainer email="you@example.com">r2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_serial</depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
