<?xml version="1.0"?>
<package format="3">
  <name>r2_lightboard_vision</name>
  <version>0.0.1</version>
  <description>Ultra-light 3x4 lightboard detector for R2.</description>

  <maintainer email="you@example.com">r2</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
