<?xml version="1.0"?>
<package format="3">
  <name>robot_serial</name>
  <version>0.0.1</version>
  <description>Decision serial commands for lower-level controller</description>
  <maintainer email="you@example.com">r2</maintainer>
  <license>Apache-2.0</license>
    
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
